<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >



    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appetizer_choice">

        <RadioButton
            android:text="@string/ui_appetizer_choice_fries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fries" />

        <RadioButton
            android:text="@string/ui_appetizer_choice_potato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/potato" />

        <RadioButton
            android:text="@string/ui_appetizer_choice_taco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taco" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/ui_tabname_appetizer"
        android:orientation="horizontal"
        android:src="@drawable/dinner"/>


</LinearLayout>
