<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:text="@string/ui_dessert_choice_chocolate_cake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chocolate_cake" />

        <RadioButton
            android:text="@string/ui_dessert_choice_ice_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ice_cream" />


    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/ui_tabname_dessert"
        android:orientation="horizontal"
        android:src="@drawable/breakfast"/>

</LinearLayout>
